fixed formulas home alignment

--- a/app/static/scss/containers.scss
+++ b/app/static/scss/containers.scss
@@ -104,7 +104,7 @@ $login-form-width: 700px;
   &--formulas {
     display: flex;
     flex-direction: row;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
 
     // align-items: center;
     // justify-content: flex-start;
@@ -294,6 +294,10 @@ $login-form-width: 700px;
 }
 
 .container-formulas {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
   padding: 20px 10px;
   margin-top: $nav-bar--height;
 
@@ -302,11 +306,7 @@ $login-form-width: 700px;
   top: 0;
 
   width: 100%;
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  height: auto;
 
   justify-content: flex-start;
   align-items: flex-start;
@@ -320,7 +320,7 @@ $login-form-width: 700px;
   flex-direction: column;
   justify-content: center;
 
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   margin-right: 20px;
 
   background-color: whitesmoke;
